--- a/Chat-app-backend/package.json
+++ b/Chat-app-backend/package.json
@@ -25,7 +25,6 @@
     "redis": "^3.0.2",
     "shortid": "^2.2.15",
     "socket.io": "^2.3.0",
-    "uuid": "^7.0.2",
-    "xoauth2": "^1.2.0"
+    "uuid": "^7.0.2"
   }
 }
