--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "helmet": "^3.21.3",
     "jsonwebtoken": "^8.5.1",
@@ -19,7 +20,8 @@
     "moment-timezone": "^0.5.28",
     "mongoose": "^5.9.5",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.4.6",
+    "nodemailer": "^6.8.0",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemailer-smtp-transport": "^2.7.4",
     "pino": "^5.17.0",
     "redis": "^3.0.2",
