--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
+    "cookie": "^0.5.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
