--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "redis": "^3.0.2",
     "shortid": "^2.2.15",
     "socket.io": "^2.3.0",
+    "unique-names-generator": "^4.7.1",
     "uuid": "^7.0.2"
   }
 }
